    with KDE Marble support.
  o Compute the salted hash of the control password ourself when starting
    Tor, rather than launching Tor once to hash the password, parsing the
    output, and then again to actually start Tor.
  o Add a signal handler that allows Vidalia to clean up and exit normally
    when it catches a SIGINT or SIGTERM signal. (Ticket #481)
  o Don't display additional plaintext port warning message boxes until
    the first visible message box is dismissed. (Ticket #493)
  o Renamed the 'make win32-installer' CMake target to 'make dist-win32'
    for consistency with our 'make dist-osx' target.
  o Fix a couple bugs in the WiX-based Windows installer related to building
    a Marble-enabled Vidalia installer.
  o Write the list of source files containing translatable strings to a
    .pro file and supply just the .pro file as an argument to lupdate, rather
    than supplying all of the source file names themselves.
  o Raise the minimum required Qt version from 4.2 to 4.3.


0.1.13  25-May-2009
  o Remove an old warning on the relay settings page that running a bridge
    relay requires Tor 0.2.0.8-alpha or newer.
  o Add a workaround for a bug that prevented Vidalia's tray icon from
    getting added to the system notification area on Gnome when Vidalia was 
    run on system startup. Patch by Steve Tyree. (Ticket #247)
  o Fix a bug that prevented the control panel from displaying when
    running on the Enlightenment window manager. Patch by Steve Tyree.
  o Rename the CMake variables used to store the location of Qt's lupdate
    and lrelease executables. Recent versions of CMake decided to use the 
    same variable name, which was stomping on mine, resulting in the wrong
    lupdate and lrelease executables being used.
  o Use the TorProcess subclass of QProcess for launching Tor when hashing
    a control password so we can take advantage of its PATH+=:/usr/sbin
    trick on Debian there too.